BSMPROD-882 problem with goals' quotes